--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,53 +18,52 @@ CONFIGURE_OSPRAY()
 
 # mini-scene graph viewer for _geometry_ (intentionally simple)
 OPTION(OSPRAY_MODULE_AMR_VOLUME "AMR Volume Module (testing)" ON)
-  
-SET(OSPRAY_SG_SOURCE_DIR ${PROJECT_SOURCE_DIR}/apps/qtViewer)
 
-INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/ospray/include)
-INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/)
-INCLUDE_DIRECTORIES(${OSPRAY_SG_SOURCE_DIR}/)
-INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
+IF (OSPRAY_MODULE_AMR_VOLUME)
+	SET(OSPRAY_SG_SOURCE_DIR ${PROJECT_SOURCE_DIR}/apps/qtViewer)
 
-# -------------------------------------------------------
-# data format loaders etc
-# -------------------------------------------------------
-ADD_LIBRARY(ospray_amr
-	Array3D.cpp
-	AMR.cpp
-	)
-TARGET_LINK_LIBRARIES(ospray_amr
-	ospray
-	)
+	INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/ospray/include)
+	INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/)
+	INCLUDE_DIRECTORIES(${OSPRAY_SG_SOURCE_DIR}/)
+	INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
 
-# -------------------------------------------------------
-# ospray plugin
-# -------------------------------------------------------
-OSPRAY_ADD_LIBRARY(ospray_module_amr${OSPRAY_LIB_SUFFIX} SHARED
-  ospray/AMRVolume.ispc
-  ospray/AMRVolume.cpp
-  )
-TARGET_LINK_LIBRARIES(ospray_module_amr${OSPRAY_LIB_SUFFIX}
-  ospray${OSPRAY_LIB_SUFFIX}
-  )
+	# -------------------------------------------------------
+	# data format loaders etc
+	# -------------------------------------------------------
+	ADD_LIBRARY(ospray_amr
+		Array3D.cpp
+		AMR.cpp
+		)
+	TARGET_LINK_LIBRARIES(ospray_amr
+		ospray
+		)
 
-# -------------------------------------------------------
-# scene graph plugin
-# -------------------------------------------------------
-ADD_LIBRARY(ospray_sg_amr${OSPRAY_LIB_SUFFIX} SHARED
-  sg/AMRVolume.cpp
-  )
+	# -------------------------------------------------------
+	# ospray plugin
+	# -------------------------------------------------------
+	OSPRAY_ADD_LIBRARY(ospray_module_amr${OSPRAY_LIB_SUFFIX} SHARED
+		ospray/AMRVolume.ispc
+		ospray/AMRVolume.cpp
+		)
+	TARGET_LINK_LIBRARIES(ospray_module_amr${OSPRAY_LIB_SUFFIX}
+		ospray${OSPRAY_LIB_SUFFIX}
+		)
+
+	# -------------------------------------------------------
+	# scene graph plugin
+	# -------------------------------------------------------
+	ADD_LIBRARY(ospray_sg_amr${OSPRAY_LIB_SUFFIX} SHARED
+		sg/AMRVolume.cpp
+		)
   TARGET_LINK_LIBRARIES(ospray_sg_amr${OSPRAY_LIB_SUFFIX}
     ospray_sg${OSPRAY_LIB_SUFFIX}
-		ospbrain
     )
   # ------------------------------------------------------------
 
-
-
-ADD_EXECUTABLE(ospRawToAmr
-	raw2amr
-	)
-TARGET_LINK_LIBRARIES(ospRawToAmr
-	ospray_amr
-	)
+	ADD_EXECUTABLE(ospRaw2OctAMR
+		raw2oamr
+		)
+	TARGET_LINK_LIBRARIES(ospRaw2OctAMR
+		ospray_amr
+		)
+ENDIF()
