--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,24 +30,24 @@ IF (OSPRAY_MODULE_AMR_VOLUME)
   # -------------------------------------------------------
   # data format loaders etc
   # -------------------------------------------------------
-  ADD_LIBRARY(ospray_amr${OSPRAY_LIB_SUFFIX}
+  ADD_LIBRARY(ospray_amr
     amr/Array3D.cpp
     amr/FromArray3DBuilder.cpp
     amr/AMR.cpp
   )
-  TARGET_LINK_LIBRARIES(ospray_amr${OSPRAY_LIB_SUFFIX}
+  TARGET_LINK_LIBRARIES(ospray_amr
     ospray
   )
 
   # -------------------------------------------------------
   # ospray plugin
   # -------------------------------------------------------
-  OSPRAY_ADD_LIBRARY(ospray_module_amr${OSPRAY_LIB_SUFFIX} SHARED
+  OSPRAY_ADD_LIBRARY(ospray_module_amr SHARED
     ospray/AMRVolume.ispc
     ospray/AMRVolume.cpp
   )
-  TARGET_LINK_LIBRARIES(ospray_module_amr${OSPRAY_LIB_SUFFIX}
-    ospray${OSPRAY_LIB_SUFFIX}
+  TARGET_LINK_LIBRARIES(ospray_module_amr
+    ospray_amr
   )
 
 
@@ -55,11 +55,12 @@ IF (OSPRAY_MODULE_AMR_VOLUME)
     # -----------------------------------------------------
     # scene graph plugin
     # -----------------------------------------------------
-    ADD_LIBRARY(ospray_sg_amr${OSPRAY_LIB_SUFFIX} SHARED
+    ADD_LIBRARY(ospray_sg_amr SHARED
       sg/AMRVolume.cpp
     )
-    TARGET_LINK_LIBRARIES(ospray_sg_amr${OSPRAY_LIB_SUFFIX}
-      ospray_sg${OSPRAY_LIB_SUFFIX}
+    TARGET_LINK_LIBRARIES(ospray_sg_amr
+      ospray_amr
+      ospray_sg
     )
     # -----------------------------------------------------
 
