adapted to feature-sep-embree version of devel

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,6 +20,8 @@ CONFIGURE_OSPRAY()
 OPTION(OSPRAY_MODULE_AMR_VOLUME "AMR Volume Module (testing)" ON)
 
 IF (OSPRAY_MODULE_AMR_VOLUME)
+  INCLUDE_DIRECTORIES(${EMBREE_INCLUDE_DIRS})
+
   SET(OSPRAY_SG_SOURCE_DIR ${PROJECT_SOURCE_DIR}/apps/qtViewer)
 
   INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/ospray/include)
