include path for ispc

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,6 +21,7 @@ OPTION(OSPRAY_MODULE_AMR_VOLUME "AMR Volume Module (testing)" ON)
 
 IF (OSPRAY_MODULE_AMR_VOLUME)
   INCLUDE_DIRECTORIES(${EMBREE_INCLUDE_DIRS})
+  INCLUDE_DIRECTORIES_ISPC(${EMBREE_INCLUDE_DIRS})
 
   SET(OSPRAY_SG_SOURCE_DIR ${PROJECT_SOURCE_DIR}/apps/qtViewer)
 
