--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -66,6 +66,8 @@ IF (OSPRAY_MODULE_AMR_VOLUME)
     # -----------------------------------------------------
     ADD_LIBRARY(ospray_sg_amr SHARED
       sg/AMRVolume.cpp
+      sg/MultiOctree.cpp
+      sg/MultiSum.cpp
       )
     OSPRAY_LIBRARY_LINK_LIBRARIES(ospray_sg_amr
       ospray_amr
