- more cleanups - multisum now tracks, saves, loads, and properly specifies value range

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,6 +39,7 @@ IF (OSPRAY_MODULE_AMR_VOLUME)
     amr/AMR.cpp
     amr/Octree.cpp
     amr/Sumerian.cpp
+    amr/MultiSumBuilder.cpp
     )
   
   OSPRAY_LIBRARY_LINK_LIBRARIES(ospray_amr
