--- a/apps/CMakeLists.txt
+++ b/apps/CMakeLists.txt
@@ -38,3 +38,13 @@ ADD_EXECUTABLE(ospRaw2Bricks
 TARGET_LINK_LIBRARIES(ospRaw2Bricks
   ospray_amr
   )
+
+# -----------------------------------------------------
+# raw to bricktree converter tool
+# -----------------------------------------------------
+ADD_EXECUTABLE(ospChombo2Raw
+  chombo2raw.cpp
+  )
+TARGET_LINK_LIBRARIES(ospChombo2Raw
+  ospray_sg_amr
+  )
