--- a/ospray/CMakeLists.txt
+++ b/ospray/CMakeLists.txt
@@ -1,15 +1,12 @@
+
+
+
+
 OSPRAY_ADD_LIBRARY(ospray_module_amr SHARED
-  AMRVolume.ispc
-  AMRVolume.cpp
-  MultiSum.ispc
-  MultiSum.cpp
+	ModuleInit.cpp
 
   ChomboVolume.cpp
   ChomboVolume.ispc
-
-  MSNearestNeighbor.ispc
-  MSCurrentLevel.ispc
-  MSFinestLevel.ispc
   )
 
 OSPRAY_LIBRARY_LINK_LIBRARIES(ospray_module_amr
