raw2amr converter, new loader code that can laod that code, bugfixes - but still not working properly

--- a/apps/CMakeLists.txt
+++ b/apps/CMakeLists.txt
@@ -9,3 +9,15 @@ TARGET_LINK_LIBRARIES(ospChombo2Raw
   ospray_sg_amr
   )
 
+
+
+# -----------------------------------------------------
+# raw to bricktree converter tool
+# -----------------------------------------------------
+ADD_EXECUTABLE(ospRaw2Chombo
+  raw2chombo.cpp
+  )
+TARGET_LINK_LIBRARIES(ospRaw2Chombo
+  ospray_sg_amr
+  )
+
