--- a/ospray/CMakeLists.txt
+++ b/ospray/CMakeLists.txt
@@ -7,6 +7,11 @@ OSPRAY_ADD_LIBRARY(ospray_module_amr SHARED
   
   ChomboVolume.cpp
   ChomboVolume.ispc
+  lerpOnFinestLevel.ispc
+  initialFind.ispc
+  CellRef.ispc
+  CompOctant.ispc
+  octMethod.ispc
   )
 
 OSPRAY_LIBRARY_LINK_LIBRARIES(ospray_module_amr
