first batch of cleanups - c++ side now cleanly separated into input rep, internal accel, and volume object

--- a/ospray/CMakeLists.txt
+++ b/ospray/CMakeLists.txt
@@ -4,7 +4,12 @@
 
 OSPRAY_ADD_LIBRARY(ospray_module_amr SHARED
   ModuleInit.cpp
-  
+
+  # the input data type - list of chombo bricks
+  ChomboData.cpp
+  # acceleration structure - kdtree over input 
+  ChomboAccel.cpp
+  # the actual volume object
   ChomboVolume.cpp
   ChomboVolume.ispc
 
