more cleanups - only using single octant format now, renamed that to 'octant', and cleaned up all uses of it

--- a/ospray/CMakeLists.txt
+++ b/ospray/CMakeLists.txt
@@ -14,14 +14,15 @@ OSPRAY_ADD_LIBRARY(ospray_module_amr SHARED
   ChomboVolume.ispc
 
   CellRef.ispc
-  CompOctant.ispc
+  Octant.ispc
 
   lerpOnFinestLevel.ispc
   blendFromCoarser.ispc
 
   octIgnoreBoundary.ispc
+  # general oct-from-coarse method
+  octFromCoarseGeneral.ispc
   octFromCoarseLevel.ispc
-  octFromCoarseCorners.ispc
   )
 
 OSPRAY_LIBRARY_LINK_LIBRARIES(ospray_module_amr
