--- a/ospray/CMakeLists.txt
+++ b/ospray/CMakeLists.txt
@@ -1,9 +1,8 @@
 OSPRAY_ADD_LIBRARY(ospray_module_amr SHARED
-  MultiSum.ispc
-  MultiSum.cpp
+  BrickTree.ispc
+  BrickTree.cpp
 
   MSNearestNeighbor.ispc
-  MSCurrentLevel.ispc
   MSFinestLevel.ispc
   )
 
