--- a/amr/CMakeLists.txt
+++ b/amr/CMakeLists.txt
@@ -1,13 +1,13 @@
 # -------------------------------------------------------
 # data format loaders etc
 # -------------------------------------------------------
-OSPRAY_ADD_LIBRARY(ospray_amr SHARED
+OSPRAY_ADD_LIBRARY(ospray_bricktree SHARED
   Array3D.cpp
   BrickTree.cpp
   BrickTreeBuilder.cpp
   )
 
-OSPRAY_LIBRARY_LINK_LIBRARIES(ospray_amr
+OSPRAY_LIBRARY_LINK_LIBRARIES(ospray_bricktree
   ospray
   )
 
