fixed makefiles for new ospray version

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,11 +23,10 @@ IF (OSPRAY_MODULE_BRICKTREE)
   INCLUDE_DIRECTORIES(${EMBREE_INCLUDE_DIRS})
   INCLUDE_DIRECTORIES_ISPC(${EMBREE_INCLUDE_DIRS})
 
-  SET(OSPRAY_SG_SOURCE_DIR ${PROJECT_SOURCE_DIR}/apps/qtViewer)
-
   INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/ospray/include)
   INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/)
-  INCLUDE_DIRECTORIES(${OSPRAY_SG_SOURCE_DIR}/)
+  INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/apps)
+  INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/apps/qtViewer)
   INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
 
   ADD_SUBDIRECTORY(amr)
