--- a/apps/CMakeLists.txt
+++ b/apps/CMakeLists.txt
@@ -5,7 +5,7 @@ ADD_EXECUTABLE(ospRaw2Bricks
   raw2bricks.cpp
   )
 TARGET_LINK_LIBRARIES(ospRaw2Bricks
-  ospray_amr
+  ospray_bricktree
   )
 
 # -----------------------------------------------------
@@ -15,6 +15,6 @@ ADD_EXECUTABLE(ospRawSlice
   raw2slice.cpp
   )
 TARGET_LINK_LIBRARIES(ospRawSlice
-  ospray_bt_common
+  ospray_bricktree
   )
 
