registering sg node and module

--- a/ospray/CMakeLists.txt
+++ b/ospray/CMakeLists.txt
@@ -1,7 +1,7 @@
 OSPRAY_ADD_LIBRARY(ospray_module_bricktree SHARED
   BrickTree.ispc
   BrickTree.cpp
-
+  Module.cpp
 #  MSNearestNeighbor.ispc
 #  MSFinestLevel.ispc
   )
