moved all bricktree code over to (new) ospcommon/array3d (rather than old bt/array3d) - including switchign to std::shared_ptrs

--- a/bt/CMakeLists.txt
+++ b/bt/CMakeLists.txt
@@ -2,7 +2,7 @@
 # data format loaders etc
 # -------------------------------------------------------
 OSPRAY_ADD_LIBRARY(ospray_bricktree SHARED
-  Array3D.cpp
+#  Array3D.cpp
   BrickTree.cpp
   BrickTreeBuilder.cpp
   )
