update cmake calls for the new API

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -46,7 +46,7 @@ IF (OSPRAY_MODULE_BRICKTREE)
     # -----------------------------------------------------
     # scene graph plugin
     # -----------------------------------------------------
-    ADD_SUBDIRECTORY(sg)
+    # ADD_SUBDIRECTORY(sg)
     
     # -----------------------------------------------------
     # converter tools
