--- a/apps/CMakeLists.txt
+++ b/apps/CMakeLists.txt
@@ -1,9 +1,9 @@
 # -----------------------------------------------------
 # raw to bricktree converter tool
 # -----------------------------------------------------
-ADD_EXECUTABLE(ospRaw2Bricks
+OSPRAY_CREATE_APPLICATION(ospRaw2Bricks
   raw2bricks.cpp
-  )
-TARGET_LINK_LIBRARIES(ospRaw2Bricks
+  
+  LINK
   ospray_bricktree
   )
