render bricktree and apply threshold

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-## ======================================================================== ##
+# ======================================================================== ##
 ## Copyright 2009-2015 Intel Corporation                                    ##
 ##                                                                          ##
 ## Licensed under the Apache License, Version 2.0 (the "License");          ##
@@ -17,7 +17,11 @@
 #CONFIGURE_OSPRAY()
 
 # mini-scene graph viewer for _geometry_ (intentionally simple)
-OPTION(OSPRAY_MODULE_BRICKTREE "BrickTree (testing)" OFF)
+OPTION(OSPRAY_MODULE_BRICKTREE "BrickTree (testing)" ON)
+OPTION(OSPRAY_MODULE_BRICKTREE_BENCH
+  "Build the benchmarker for bricktree volume" ON)
+OPTION(OSPRAY_MODULE_BRICKTREE_WIDGET
+  "Build the viewer for bricktree volume" ON)
 
 IF (OSPRAY_MODULE_BRICKTREE)
   FIND_PACKAGE(HDF5 REQUIRED)
