use std::map to store tree for block query

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,6 +29,13 @@ IF (OSPRAY_MODULE_BRICKTREE)
     INCLUDE_DIRECTORIES(${HDF5_INCLUDE_DIRS})
     ADD_DEFINITIONS(${HDF5_DEFINITIONS})
   ENDIF()
+
+  SET(OSPRAY_DEFAULT_COMPONENT mpi)
+
+  OSPRAY_CONFIGURE_MPI()
+
+  OSPRAY_BUILD_COMPONENT(mpiCommon)
+  OSPRAY_BUILD_COMPONENT(mpiMessageLayer)
   
   INCLUDE_DIRECTORIES(${EMBREE_INCLUDE_DIRS})
   INCLUDE_DIRECTORIES_ISPC(${EMBREE_INCLUDE_DIRS})
