--- a/apps/CMakeLists.txt
+++ b/apps/CMakeLists.txt
@@ -9,11 +9,9 @@ endif ()
 # raw to bricktree converter tool
 # -----------------------------------------------------
 OSPRAY_CREATE_APPLICATION(ospRaw2Bricks
-  raw2bricks.cpp
-  
+  raw2bricks.cpp  
   LINK
-  ospray_bricktree
-  )
+  ospray_bricktree)
 
 ## ====================================================================== ##
 ## Benchmarker Widget
