--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -36,8 +36,8 @@ IF (OSPRAY_MODULE_BRICKTREE)
   OSPRAY_BUILD_COMPONENT(mpiCommon)
   OSPRAY_BUILD_COMPONENT(mpiMessageLayer)
   
-  INCLUDE_DIRECTORIES_ISPC(${EMBREE_INCLUDE_DIRS})
-  INCLUDE_DIRECTORIES(${EMBREE_INCLUDE_DIRS})
+  INCLUDE_DIRECTORIES_ISPC(${EMBREE_INCLUDE_DIRS}/embree3)
+  INCLUDE_DIRECTORIES(${EMBREE_INCLUDE_DIRS}/embree3)
 
   INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
   INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR})
